Changes from Version 0.15-13 to 0.15-14 [XXX]

* Added support for weights to crs()

* Corrected issue with reporting of cv function value with quantile
  regression splines

* Test for coexistence of pruning and quantile regression splines and
  stop with a message that these cannot coexist

Changes from Version 0.15-12 to 0.15-13 [05-Mar-2012]

* Added new function crsivderiv()

* More options added to crsiv()

* Modified vignette (spline_primer)

* Corrected error in demo for IV regression when exhaustive search was
  selected (nmulti needed to be set though it is not used)

* Changes to code to improve compliance with R `Writing portable
  packages' guidelines and correct partial argument matches

Changes from Version 0.15-11 to 0.15-12 [7-Dec-2011]

* Added option to limit the minimum degrees of freedom when conducting
  cross validation (see cv.df.min which defaults to 1) which can save
  memory and computation time for large sample sizes by avoiding
  computation of potentially very large dimensioned spline bases

Changes from Version 0.15-10 to 0.15-11 [3-Dec-2011]

* Fixed glitch in bwtype="auto" when adaptive_nn is selected

Changes from Version 0.15-9 to 0.15-10 [3-Dec-2011]

* Fixed regression in code when using cv.func=cv.aic

* Added option bwtype="auto" for npglpreg (automatically determine the
  bandwidth type via cross-validation)

Changes from Version 0.15-8 to 0.15-9 [25-Nov-2011]

* Fixed glitch when computing derivatives with crs and multiple
  predictors are of degree zero

* Added support for parallel npglpreg (calls npRmpi rather than np -
  see demo)

* Improved handling of complex bases via dim.bs (test for negative
  degrees of freedom prior to attempting to construct the basis
  function - dramatically reduces memory overhead and can cut down on
  unnecessary computation)

Changes from Version 0.15-7 to 0.15-8 [16-Nov-2011]

* Added support for is.fullrank testing for generalized local